Fixing #headerwrap

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -160,8 +160,8 @@ a:after {
 /* Header Wrap */
 #headerwrap {
 	background: url(../img/header-bg.jpg) no-repeat center top;
-	margin-top: 60px;
-	padding-top: 80px;
+	margin-top: 30px;
+	padding-top: 60px;
 	text-align:center;
 	background-attachment: relative;
 	background-position: center center;
